test/haskell2010/conformance/negative/duplicate-binding.hs
module Main where

main = 1
main = 2
